Basics in place, still not fulling working

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ opentelemetry-distro==0.49b0
 opentelemetry-instrumentation==0.49b0
 opentelemetry-sdk==1.28.0
 opentelemetry-semantic-conventions==0.49b0
+marshmallow==3.23.1
